<resources>
    <string name="app_name">EPL</string>
    <string name="premier_league">Premier League</string>
    <string name="stats">Stats</string>
    <string name="standings">Standings</string>
    <string name="favorite">Favorite</string>
    <string name="team_badge">Team Badge</string>
    <string name="played_short">P</string>
    <string name="goal_diff_short">GD</string>
    <string name="points_short">Pts</string>
    <string name="goals">Goals</string>
    <string name="squad">Squad</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="club_enquiries">Club Enquiries</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="added_to_favorite">Added to Favorite</string>
    <string name="removed_from_favorite">Removed from Favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="pref_theme_mode_key">pref_theme_mode_key</string>
    <string name="preference_file_key">com.chriskevin.epl.pref_file_key</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="title_favorite">Favorite</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_data">No Data</string>
    <string name="check_connection">An error occurred. Please check your connection</string>
</resources>