<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/grid_2"
    android:layout_marginBottom="@dimen/grid_1"
    tools:ignore="RtlSymmetry">

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/team_played"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_played"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/grid_1"
        android:text="@string/played_short"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/team_goal_dif"
        app:layout_constraintStart_toEndOf="@id/space"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_goal_dif"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/grid_1"
        android:text="@string/goal_diff_short"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/team_points"
        app:layout_constraintStart_toEndOf="@id/team_played"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_points"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/grid_1"
        android:text="@string/points_short"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceBody1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/team_goal_dif"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>