<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.chriskevin.epl.ui.teamdetails.TeamDetailsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:paddingLeftSystemWindowInsets="@{true}"
        app:paddingRightSystemWindowInsets="@{true}"
        tools:context=".ui.teamdetails.TeamDetailsFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:marginTopSystemWindowInsets="@{true}"
                    app:menu="@menu/team_details"
                    app:navigationIcon="@drawable/ic_back"
                    app:title="@{viewModel.details.teamInfo.tla}"
                    tools:title="MUN" />

                <ImageView
                    android:id="@+id/team_badge"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="@dimen/grid_1_5"
                    android:contentDescription="@string/team_badge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar"
                    app:teamBadge="@{viewModel.details.teamInfo.crestUrl}"
                    tools:src="@drawable/ic_mu" />

                <TextView
                    android:id="@+id/team_name"
                    style="?textAppearanceHeadline5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:layout_marginTop="@dimen/grid_1_5"
                    android:text="@{viewModel.details.teamInfo.name}"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/team_badge"
                    tools:text="Manchester United FC" />

                <TextView
                    android:id="@+id/team_founded"
                    style="?textAppearanceSubtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1_5"
                    android:text='@{viewModel.details.teamInfo.founded != null ? String.valueOf(viewModel.details.teamInfo.founded) : "-"}'
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@id/team_stadium"
                    app:layout_constraintEnd_toEndOf="@id/team_name"
                    app:layout_constraintStart_toStartOf="@id/team_name"
                    app:layout_constraintTop_toBottomOf="@id/team_name"
                    tools:text="1878" />

                <TextView
                    android:id="@+id/team_stadium"
                    style="?textAppearanceSubtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1_5"
                    android:text="@{viewModel.details.teamInfo.venue}"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@id/team_website"
                    app:layout_constraintEnd_toEndOf="@id/team_name"
                    app:layout_constraintStart_toStartOf="@id/team_name"
                    app:layout_constraintTop_toBottomOf="@id/team_founded"
                    tools:text="Old Trafford" />

                <TextView
                    android:id="@+id/team_website"
                    style="?textAppearanceSubtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/grid_1_5"
                    android:text="@{viewModel.details.teamInfo.website}"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@id/team_address_title"
                    app:layout_constraintEnd_toEndOf="@id/team_name"
                    app:layout_constraintStart_toStartOf="@id/team_name"
                    app:layout_constraintTop_toBottomOf="@id/team_stadium"
                    tools:text="www.manutd.com" />

                <TextView
                    android:id="@+id/team_address_title"
                    style="?textAppearanceSubtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_2"
                    android:text="@string/address"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/team_address"
                    app:layout_constraintEnd_toEndOf="@id/team_name"
                    app:layout_constraintStart_toStartOf="@id/team_name"
                    app:layout_constraintTop_toBottomOf="@id/team_website" />

                <TextView
                    android:id="@+id/team_address"
                    style="?textAppearanceSubtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_0_5"
                    android:text="@{viewModel.details.teamInfo.address}"
                    app:layout_constraintEnd_toEndOf="@id/team_name"
                    app:layout_constraintStart_toStartOf="@id/team_name"
                    app:layout_constraintTop_toBottomOf="@id/team_address_title"
                    tools:text="Sir Matt Busby Way Manchester M16 0RA" />

                <TextView
                    android:id="@+id/team_phone_title"
                    style="?textAppearanceSubtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1_5"
                    android:text="@string/phone"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/team_phone"
                    app:layout_constraintEnd_toEndOf="@id/team_name"
                    app:layout_constraintStart_toStartOf="@id/team_name"
                    app:layout_constraintTop_toBottomOf="@id/team_address" />

                <TextView
                    android:id="@+id/team_phone"
                    style="?textAppearanceSubtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_0_5"
                    android:text="@{viewModel.details.teamInfo.phone}"
                    app:layout_constraintBottom_toTopOf="@id/team_enquiries_title"
                    app:layout_constraintEnd_toEndOf="@id/team_name"
                    app:layout_constraintStart_toStartOf="@id/team_name"
                    app:layout_constraintTop_toBottomOf="@id/team_phone_title"
                    tools:text="+44 (0161) 8688000" />

                <TextView
                    android:id="@+id/team_enquiries_title"
                    style="?textAppearanceSubtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1_5"
                    android:text="@string/club_enquiries"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/team_enquiries"
                    app:layout_constraintEnd_toEndOf="@id/team_name"
                    app:layout_constraintStart_toStartOf="@id/team_name"
                    app:layout_constraintTop_toBottomOf="@id/team_phone" />

                <TextView
                    android:id="@+id/team_enquiries"
                    style="?textAppearanceSubtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_0_5"
                    android:text="@{viewModel.details.teamInfo.email}"
                    app:layout_constraintEnd_toEndOf="@id/team_name"
                    app:layout_constraintStart_toStartOf="@id/team_name"
                    app:layout_constraintTop_toBottomOf="@id/team_enquiries_title"
                    tools:text="enquiries@manutd.co.uk" />

                <Button
                    android:id="@+id/squad_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_2"
                    android:text="@string/squad"
                    android:textAlignment="textStart"
                    app:icon="@drawable/ic_baseline_keyboard_arrow_right"
                    app:iconGravity="end"
                    app:layout_constraintEnd_toEndOf="@id/team_name"
                    app:layout_constraintStart_toStartOf="@id/team_name"
                    app:layout_constraintTop_toBottomOf="@id/team_enquiries" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/squad_button"
                    app:marginBottomSystemWindowInsets="@{true}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:marginTopSystemWindowInsets="@{true}" />

        <TextView
            android:id="@+id/no_data_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/no_data"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceBody1"
            android:visibility="gone" />

    </FrameLayout>
</layout>